ensures background image leaves no gaps

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,6 +7,8 @@ body {
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center center;
+    min-height: 100vh;
+    min-width: 100vw;
 }
 
 /* Logo & Nav */
